# archive-it-client

./: .gitignore  Cargo.toml  Makefile  README.md  fakeify.jq  fixtures.sh
.github/workflows/: publish.yml
crates/http-ferry/: Cargo.toml  README.md
crates/http-ferry/examples/: local_download.rs
crates/http-ferry/src/: http.rs  lib.rs  local.rs
examples/: count_bytes.rs  download_collection.rs  download_s3.rs  partner.rs  public.rs  warcs_audit.rs  warcs_inventory.rs  warcs_sync.rs  wasapi.rs
fixtures/: api.json  api_account_authenticated.json  api_account_public.json  api_accounts_authenticated.json  api_accounts_public.json  api_collection_authenticated.json  api_collection_public.json  api_collections_authenticated.json  api_collections_public.json  wasapi_collection.json
src/: error.rs  http.rs  lib.rs  partner.rs  public.rs  wasapi.rs
src/downloads/: local.rs  mod.rs  range.rs  s3.rs
src/models/: mod.rs  partner.rs  public.rs  wasapi.rs
tests/: clients.rs  fixtures.rs
