[package]
name = "archive-it-client"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
futures-core = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["sync", "time"] }
url = "2"

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
