[package]
name = "archive-it-client"
version = "0.1.0"
edition = "2024"
authors = ["Mark Cooper <gh.aftermath967@passinbox.com>"]
description = "Rust client for Archive-It's partner API and WASAPI"
license = "MIT OR Apache-2.0"

[features]
default = []
s3 = ["dep:aws-sdk-s3"]

[dependencies]
async-stream = "0.3"
aws-sdk-s3 = { version = "1", optional = true, default-features = false, features = [
  "behavior-version-latest",
  "rt-tokio",
] }
bytes = "1"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
thiserror = "2"
tokio = { version = "1", default-features = false, features = [
  "fs",
  "io-util",
  "sync",
  "time",
] }
url = "2"

[dev-dependencies]
futures = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
