[package]
name = "http-ferry"
version = "0.2.0"
edition = "2024"
authors = ["Mark Cooper <gh.aftermath967@passinbox.com>"]
description = "Resumable, checksum-verified streaming byte transfer from HTTP sources to pluggable sinks"
keywords = ["download", "http", "resume", "s3", "streaming"]
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mark-cooper/archive-it-client"

[dependencies]
async-stream = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
md-5 = "0.11"
reqwest = { version = "0.13", default-features = false, features = [
  "rustls-tls",
  "stream",
] }
sha1 = "0.11"
thiserror = "2"
tokio = { version = "1", default-features = false, features = [
  "fs",
  "io-util",
  "time",
] }
url = "2"

aws-sdk-s3 = { version = "1", default-features = false, features = [
  "behavior-version-latest",
  "rt-tokio",
], optional = true }

[features]
# The S3 multipart sink pulls in the whole aws-sdk-s3 tree, so it is opt-in:
# consumers who only download to disk don't pay for it.
s3 = ["dep:aws-sdk-s3"]

[dev-dependencies]
aws-config = "1"
aws-credential-types = "1"
aws-smithy-http-client = { version = "1", features = ["test-util"] }
aws-smithy-types = "1"
http = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
